# cpp-benchmarks

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  allocaors_bench.cpp
cmake/: build_config.cmake  setup_cppb_paths.cmake  thirdparty_superbuild.cmake
cmake/util/: compiler_utils.cmake  submodules.cmake
src/allocator/: fallback_allocator.h  mallocator.h  memory.h  memory_block.h  mmap_allocator.h  numa_control.h  units.h
src/buffer/: buffer.h
src/io/: chunker.h  file.h  file_stream.h
src/util/: compiler_macros.h  fake_data.h  macros.h  randomizer.h  utils.h
test/: CMakeLists.txt
test/allocator/: test_allocators.cpp
test/buffer/: test_buffer.cpp
test/data/: first_names.txt
test/io/: test_chunker.cpp  test_file.cpp
